--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "@taiga-ui/addon-table": "^4.20.0",
+    "@taiga-ui/cdk": "^4.21.0",
+    "@taiga-ui/core": "^4.20.0",
+    "@taiga-ui/icons": "^4.20.0",
+    "@taiga-ui/kit": "^4.20.0",
+    "@taiga-ui/layout": "^4.21.0",
+    "@taiga-ui/legacy": "^4.20.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
