--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.1",
     "pg": "^8.16.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -40,6 +41,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/jasmine": "~5.1.0",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^1.4.13",
     "@types/pg": "^8.15.4",
     "bcrypt": "^6.0.0",
     "jasmine-core": "~5.5.0",
