--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name schedulekngk.ru www.schedulekngk.ru;
+    server_name schedulekngk.online www.schedulekngk.online;
 
     root /usr/share/nginx/html;
     index index.html;
