--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,10 +4,11 @@ WORKDIR /app
 
 COPY package*.json ./
 RUN npm install
-RUN chmod +x node_modules/.bin/ts-node
 
 COPY . .
 
+RUN npm run build
+
 EXPOSE 3001
 
-CMD ["npm", "run", "dev"] 
+CMD ["npm", "start"] 
