--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "app.ts",
   "scripts": {
-    "start": "ts-node app.ts",
+    "start": "node dist/app.js",
+    "build": "tsc",
     "dev": "ts-node app.ts"
   },
   "dependencies": {
