--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "app.ts",
   "scripts": {
-    "start": "node dist/app.js",
-    "build": "tsc",
+    "start": "ts-node app.ts",
     "dev": "ts-node app.ts"
   },
   "dependencies": {
