Обновление .gitignore: добавлены правила игнорирования для Node.js, Angular и Docker, а также улучшена структура для логов и окружения.

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,30 @@
 # See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
-# Compiled output
+# Node.js, Angular, Docker ignore
+
+# Output and dependencies
 /dist
 /tmp
 /out-tsc
 /bazel-out
-
-# Node
 /node_modules
-npm-debug.log
-yarn-error.log
+backend/node_modules
+backend/dist
+
+# Logs
+npm-debug.log*
+yarn-error.log*
+*.log
+
+# Environment
+.env
+.env.*
+
+# Docker
+Dockerfile
+nginx.Dockerfile
+docker-compose.yml
+*.pid
 
 # IDEs and editors
 .idea/
@@ -20,15 +35,14 @@ yarn-error.log
 .settings/
 *.sublime-workspace
 
-# Visual Studio Code
+# VSCode
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-.history/*
 
-# Miscellaneous
+# Angular/CLI
 /.angular/cache
 .sass-cache/
 /connect.lock
@@ -40,3 +54,6 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# History
+.history/*
