Изменение конфигурации Nginx: обновлен серверный адрес с 'schedulekngk.online' на 'schedulekngk.ru'.

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,16 +1,14 @@
 server {
     listen 80;
-    server_name schedulekngk.online www.schedulekngk.online;
+    server_name schedulekngk.ru www.schedulekngk.ru;
 
     root /usr/share/nginx/html;
     index index.html;
 
-    # Angular SPA: отдаём index.html для всех несуществующих файлов
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # Прокси для API-запросов на backend
     location /api/ {
         proxy_pass http://backend:3001;
         proxy_set_header Host $host;
