--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,11 +4,10 @@ WORKDIR /app
 
 COPY package*.json ./
 RUN npm install
+RUN chmod +x node_modules/.bin/ts-node
 
 COPY . .
 
-RUN npm run build
-
 EXPOSE 3001
 
-CMD ["npm", "start"] 
+CMD ["npm", "run", "dev"] 
