Изменение корневого каталога в конфигурации Nginx с '/usr/share/nginx/html' на '/var/www/dist' для соответствия новой структуре развертывания приложения.

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name schedulekngk.online www.schedulekngk.online;
 
-    root /usr/share/nginx/html;
+    root /var/www/dist;
     index index.html;
 
     # Angular SPA: отдаём index.html для всех несуществующих файлов
